force-app/main/default/objects/ca2cq_log__c/ca2cq_log__c.object-meta.xml
<CustomObject>
    <label>Migration Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Chatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>