force-app/main/default/objects/ca2cq_log__c/fields/Answers_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Answers_Migrated__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of answers migrated</description>
    <inlineHelpText>Total number of answers migrated</inlineHelpText>
    <label>Answers Migrated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>