force-app/main/default/objects/ca2cq_log__c/fields/Answers_Selected__c.field-meta.xml
<CustomField>
    <fullName>Answers_Selected__c</fullName>
    <description>Total number of answers selected to migrate</description>
    <inlineHelpText>Total number of answers selected to migrate</inlineHelpText>
    <label>Answers Selected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>