force-app/main/default/objects/ca2cq_log__c/fields/Questions_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Questions_Migrated__c</fullName>
    <description>Total number of questions migrated</description>
    <inlineHelpText>Total number of questions migrated</inlineHelpText>
    <label>Questions Migrated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>