force-app/main/default/objects/ca2cq_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Questions_Selected__c</columns>
    <columns>Questions_Migrated__c</columns>
    <columns>Errors_on_Questions__c</columns>
    <columns>Answers_Selected__c</columns>
    <columns>Answers_Migrated__c</columns>
    <columns>Errors_on_Answers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>